[tool.poetry]
name = "http_monitor"
version = "0.1.0"
description="Simple tool to monitor HTTP logs and trigger warnings"
authors = ["Martin Faucheux <martin.faucheux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
http_monitor = 'http_monitor.main:cli'